--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sejiwa | Kesehatan Mental</title>
+    <title>HealMind | Kesehatan Mental</title>
 
     <style>
         * {
@@ -106,8 +106,8 @@
 <body>
 
 <header>
-    <h1>Sejiwa</h1>
-    <p>Ruang Aman untuk Menjaga Kesehatan Mental</p>
+    <h1>HealMind</h1>
+    <p>Teman Setia untuk Menjaga Kesehatan Mentalmu</p>
 </header>
 
 <section class="affirmation">
@@ -120,9 +120,9 @@
     <h2>Tips Menjaga Kesehatan Mental</h2>
     <div class="cards">
         <div class="card">🧘‍♀️ Luangkan waktu untuk diri sendiri</div>
-        <div class="card">💬 Cerita ke orang yang kamu percaya</div>
-        <div class="card">😴 Tidur cukup dan teratur</div>
-        <div class="card">📵 Kurangi media sosial berlebihan</div>
+        <div class="card">💬 Ceritakan perasaanmu pada orang terpercaya</div>
+        <div class="card">😴 Jaga pola tidur yang sehat</div>
+        <div class="card">📵 Kurangi penggunaan media sosial berlebihan</div>
     </div>
 </section>
 
@@ -134,7 +134,7 @@
 </section>
 
 <footer>
-    <p>© 2025 Sejiwa | Peduli Kesehatan Mental</p>
+    <p>© 2025 HealMind | Peduli Kesehatan Mental</p>
 </footer>
 
 <script>
@@ -142,7 +142,7 @@
         "Aku berharga dan pantas bahagia 🌱",
         "Tidak apa-apa untuk beristirahat",
         "Perasaanku valid dan penting",
-        "Aku melakukan yang terbaik hari ini",
+        "Aku sudah berusaha sebaik mungkin hari ini",
         "Langkah kecil tetap berarti"
     ];
 
@@ -153,10 +153,9 @@
 
     function saveReflection() {
         document.getElementById("saved").innerText =
-            "Perasaanmu tersimpan. Terima kasih sudah jujur pada diri sendiri 💙";
+            "Refleksimu tersimpan. Terima kasih sudah jujur pada diri sendiri 💙";
     }
 </script>
 
 </body>
-    </html>
-    
+</html>
